# toic

./: .editorconfig  .gitignore  .prettierignore  Cargo.toml  README.md  dfx.json  package-lock.json  package.json  tarpaulin.toml
.github/workflows/: coverage.yml
src/toic_backend/: Cargo.toml  toic_backend.did
src/toic_backend/src/: lib.rs  memory.rs  structure.rs  types.rs  utils.rs
src/toic_backend/src/repositories/: draft.rs  story.rs  user.rs
src/toic_backend/src/services/: draft.rs  drafts.rs  llm.rs  mod.rs  story.rs  user.rs
src/toic_backend/src/token/: api.rs  constant.rs  mod.rs  types.rs
src/toic_frontend/: index.html  package.json  tsconfig.json  vite.config.ts
src/toic_frontend/__mocks__/@declarations/toic_backend/: index.ts
src/toic_frontend/__mocks__/@dfinity/: auth-client.ts
src/toic_frontend/src/: App.jsx  App.tsx  index.css  main.tsx
src/toic_frontend/src/components/blocks/: donate-dialog.tsx  editor-floating-menu.tsx  navbar-editor.tsx  navbar.tsx  profile-button.tsx  stake-dialog.tsx  (+2 more)
src/toic_frontend/src/lib/: auth.test.ts  auth.ts  env.ts  mapper.ts  string.test.ts  string.ts
src/toic_frontend/src/pages/: Landing.tsx  landing.tsx  loading.tsx  me.tsx  new-story.tsx  not-found.tsx  onboarding.tsx  story-editor.tsx  story.tsx
src/toic_frontend/src/routes/: auth-guard.tsx  editor-guard.tsx  guard.tsx  routes.tsx
src/toic_frontend/src/services/: auth.test.ts  auth.ts
src/toic_frontend/src/store/: auth.ts  common.ts  drafting.ts  feed.ts  personal.ts  wallet.ts
src/toic_frontend/src/types/: candid.ts  core.ts
(+17 files in other folders)
