[package]
name = "toic_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(rust_analyzer)'] }

[dependencies]
candid = "0.10"
ic-cdk = "0.17"
ic-llm = "0.4.0"
ic-stable-structures = "0.6.8"
serde = "1.0.219"
serde_bytes = "0.11.17"
serde_json = "1.0.140"
ciborium = "0.2.2"
ic-cdk-timers = "0.11" # Feel free to remove this dependency if you don't need timers
itertools = "0.14.0"
thiserror = "2.0.12"
lazy_static = "1.5.0"
strum = { version = "0.27.1", features = ["derive"] }
icrc-ledger-types = "0.1.5"
